# blaze-engine

./: .gitignore  CMakeLists.txt  README.md  test.html
include/: blaze.h  blaze_html.h
src/: blaze.cpp  blaze_html.cpp
src/test/: main.cpp
